# todo-list-fullstack-application

todo-list-back-end/: Cargo.toml
todo-list-back-end/src/: Handlers.rs  main.rs
todo-list-back-end/src/Handlers/: Services.rs
todo-list-front-end/: package-lock.json  package.json
todo-list-front-end/src/: App.css  App.js
todo-list-front-end/src/pages/: Home.js  SignIn.js  SignUp.js
todo-list-front-end/src/pages/Home Pages/: Body.js  Profile.js  ProfileMain.js  Sidenav.js
todo-list-front-end/src/pages/Home Pages/css/: Body.module.css  Profile.module.css  Sidenav.module.css
todo-list-front-end/src/pages/css/: Home.module.css  Login.module.css
todo-list-front-end/src/pages/tasks/: CompletedTasks.js  CreateTask.js  UnCompletedTasks.js  tasksManagement.js
todo-list-front-end/src/pages/tasks/css/: CreateTask.module.css
